--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,14 @@
 page-home {
-
+    ul {
+        padding: 0px;
+        margin: 0px;
+        &.rating li {
+            padding: 4px 4px !important;
+            background: none;
+            color: #ffb400;
+            ion-icon {
+                font-size: 20px;
+            }
+        }
+    }
 }
